--- a/.github/resources/manifests/kubernetes-native/overlays/no-proxy/kustomization.yaml
+++ b/.github/resources/manifests/kubernetes-native/overlays/no-proxy/kustomization.yaml
@@ -2,17 +2,23 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- ../../../../../../manifests/kustomize/env/cert-manager/platform-agnostic-k8s-native
+- ../../../../../../manifests/kustomize/env/kubernetes-native/platform-agnostic
 
 images:
 - name: ghcr.io/kubeflow/kfp-api-server
-  newName: kind-registry:5000/apiserver
+  newName: docker.io/library/apiserver
   newTag: latest
 - name: ghcr.io/kubeflow/kfp-persistence-agent
-  newName: kind-registry:5000/persistenceagent
+  newName: docker.io/library/persistenceagent
   newTag: latest
 - name: ghcr.io/kubeflow/kfp-scheduled-workflow-controller
-  newName: kind-registry:5000/scheduledworkflow
+  newName: docker.io/library/scheduledworkflow
+  newTag: latest
+- name: ghcr.io/kubeflow/kfp-driver
+  newName: docker.io/library/driver
+  newTag: latest
+- name: ghcr.io/kubeflow/kfp-launcher
+  newName: docker.io/library/launcher
   newTag: latest
 
 patchesStrategicMerge:
