changes to kustomizatino
Signed-off-by: SanthoshToorpu <toorpusanthosh@gmail.com>

--- a/.github/resources/manifests/argo/overlays/no-proxy/apiserver-env.yaml
+++ b/.github/resources/manifests/argo/overlays/no-proxy/apiserver-env.yaml
@@ -14,6 +14,7 @@ spec:
               value: docker.io/library/launcher
       initContainers:
       - name: ml-pipeline-api-server-init
+        image: ghcr.io/kubeflow/kfp-launcher:2.4.1
         env:
         - name: DRIVER_IMAGE
           value: docker.io/library/driver
