--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -33,9 +33,15 @@ jobs:
           python-version: 3.9
 
       - name: Create KFP cluster
-        uses: ./.github/actions/kfp-cluster
+        uses: ./.github/actions/create-cluster
         with:
           k8s_version: ${{ matrix.k8s_version }}
+          
+      - name: Build KFP images
+        uses: ./.github/actions/build-images
+        
+      - name: Deploy KFP
+        uses: ./.github/actions/deploy-kfp
 
       - name: Forward API port
         run: ./.github/resources/scripts/forward-port.sh "kubeflow" "ml-pipeline" 8888 8888
@@ -75,9 +81,15 @@ jobs:
           python-version: 3.9
 
       - name: Create KFP cluster
-        uses: ./.github/actions/kfp-cluster
+        uses: ./.github/actions/create-cluster
         with:
           k8s_version: ${{ matrix.k8s_version }}
+          
+      - name: Build KFP images
+        uses: ./.github/actions/build-images
+        
+      - name: Deploy KFP
+        uses: ./.github/actions/deploy-kfp
 
       - name: Forward API port
         run: ./.github/resources/scripts/forward-port.sh "kubeflow" "ml-pipeline" 8888 8888
@@ -117,9 +129,15 @@ jobs:
           python-version: 3.9
 
       - name: Create KFP cluster
-        uses: ./.github/actions/kfp-cluster
+        uses: ./.github/actions/create-cluster
         with:
           k8s_version: ${{ matrix.k8s_version }}
+          
+      - name: Build KFP images
+        uses: ./.github/actions/build-images
+        
+      - name: Deploy KFP
+        uses: ./.github/actions/deploy-kfp
 
       - name: Forward API port
         run: ./.github/resources/scripts/forward-port.sh "kubeflow" "ml-pipeline" 8888 8888
@@ -162,9 +180,15 @@ jobs:
           python-version: 3.9
 
       - name: Create KFP cluster
-        uses: ./.github/actions/kfp-cluster
+        uses: ./.github/actions/create-cluster
         with:
           k8s_version: ${{ matrix.k8s_version }}
+          
+      - name: Build KFP images
+        uses: ./.github/actions/build-images
+        
+      - name: Deploy KFP
+        uses: ./.github/actions/deploy-kfp
 
       - name: Forward API port
         run: ./.github/resources/scripts/forward-port.sh "kubeflow" "ml-pipeline" 8888 8888
@@ -205,27 +229,42 @@ jobs:
 
       - name: Create KFP cluster
         id: create-kfp-cluster
-        uses: ./.github/actions/kfp-cluster
+        uses: ./.github/actions/create-cluster
         with:
           k8s_version: ${{ matrix.k8s_version }}
+        continue-on-error: true
+          
+      - name: Build KFP images
+        id: build-kfp-images
+        if: ${{ steps.create-kfp-cluster.outcome == 'success' }}
+        uses: ./.github/actions/build-images
+        with:
+          proxy: 'true'
+        continue-on-error: true
+        
+      - name: Deploy KFP
+        id: deploy-kfp
+        if: ${{ steps.build-kfp-images.outcome == 'success' }}
+        uses: ./.github/actions/deploy-kfp
+        with:
           proxy: 'true'
         continue-on-error: true
 
       - name: Forward API port
         id: forward-api-port
-        if: ${{ (steps.create-kfp-cluster.outcome == 'success' )}}
+        if: ${{ steps.deploy-kfp.outcome == 'success' }}
         run: ./.github/resources/scripts/forward-port.sh "kubeflow" "ml-pipeline" 8888 8888
         continue-on-error: true
 
       - name: API integration tests v2
         id: tests
-        if: ${{ (steps.forward-api-port.outcome == 'success' )}}
+        if: ${{ steps.forward-api-port.outcome == 'success' }}
         working-directory: ./backend/test/v2/integration
         run: go test -v ./... -namespace kubeflow -args -runIntegrationTests=true -useProxy=true
         continue-on-error: true
 
       - name: Collect failed logs
-        if: ${{ (steps.create-kfp-cluster.outcome != 'success' ) || ( steps.forward-api-port.outcome != 'success' ) || ( steps.tests.outcome != 'success' )}}
+        if: ${{ (steps.create-kfp-cluster.outcome != 'success' ) || ( steps.build-kfp-images.outcome != 'success' ) || ( steps.deploy-kfp.outcome != 'success' ) || ( steps.forward-api-port.outcome != 'success' ) || ( steps.tests.outcome != 'success' )}}
         run: |
           ./.github/resources/scripts/collect-logs.sh --ns squid --output /tmp/tmp_squid_pod_log.txt
           ./.github/resources/scripts/collect-logs.sh --ns kubeflow --output /tmp/tmp_pod_log.txt
@@ -254,9 +293,15 @@ jobs:
           python-version: 3.9
 
       - name: Create KFP cluster
-        uses: ./.github/actions/kfp-cluster
+        uses: ./.github/actions/create-cluster
         with:
           k8s_version: ${{ matrix.k8s_version }}
+          
+      - name: Build KFP images
+        uses: ./.github/actions/build-images
+        
+      - name: Deploy KFP
+        uses: ./.github/actions/deploy-kfp
 
       - name: Forward API port
         run: ./.github/resources/scripts/forward-port.sh "kubeflow" "ml-pipeline" 8888 8888
@@ -303,9 +348,15 @@ jobs:
           python-version: 3.9
 
       - name: Create KFP cluster
-        uses: ./.github/actions/kfp-cluster
+        uses: ./.github/actions/create-cluster
         with:
           k8s_version: ${{ matrix.k8s_version }}
+          
+      - name: Build KFP images
+        uses: ./.github/actions/build-images
+        
+      - name: Deploy KFP
+        uses: ./.github/actions/deploy-kfp
 
       - name: Forward API port
         run: ./.github/resources/scripts/forward-port.sh "kubeflow" "ml-pipeline" 8888 8888
